@@ -1,3 +1,4 @@
+11/11/10 move creation of battery body shape into Battery model element
 11/11/10 move rendering of battery terminal shapes into BatteryNode
 11/11/10 restore spacing between dielectric charges
 # 0.00.39 (45953) Nov 11, 2010
